# aerulias-ai

./: .env.azure  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  Dockerfile  FASTEST_DEPLOYMENT.md  IMPROVEMENTS.md  LICENSE  LOCAL_SETUP_WORKING.md  PRESENTATION.md  Procfile  QUALITY_IMPROVEMENTS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_LIVE_SETUP.md  README.md  ROADMAP.md  api_server.py  azure.yaml  benchmark.py  compare_models.py  dashboard_server.py  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements-local.txt  requirements-minimal.txt  requirements.txt  test_pipeline.py  wrangler.jsonc
.github/workflows/: ci-cd.yml  tests.yml
agents/: common.py  config.py  database.py  demo.py  errors.py  evaluator.py  generator.py  main.py  memory.py  pipeline.py  portfolio.py  refiner.py  sources.py
docs/: API.md  ENGINEERING_BEST_PRACTICES.md  PRODUCTION_DEPLOYMENT.md  architecture.md  demo_script.md  deployment.md  resume_linkedin.md
infra/: main.bicep  prepdeploy.sh
scripts/: quality_check.sh
tests/: test_agents.py  test_generator.py  test_memory.py  test_portfolio.py  test_sources.py
web/: app.js  index.html  styles.css
