[tool.poetry]
name = "aerulias_ai"
version = "1.0.0"
description = "Enterprise-grade multi-agent answer improvement system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --cov=agents --cov-report=html --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["agents"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]
precision = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
